@@ -640,7 +640,6 @@ static void _commandLine(struct ARMDebugger* debugger) {
 	while (debugger->state == DEBUGGER_PAUSED) {
 		line = el_gets(cliDebugger->elstate, &count);
 		if (!line) {
-			debugger->state = DEBUGGER_EXITING;
 			return;
 		}
 		if (line[0] == '\n') {
