@@ -16,7 +16,6 @@ enum DebuggerState {
 	DEBUGGER_PAUSED,
 	DEBUGGER_RUNNING,
 	DEBUGGER_CUSTOM,
-	DEBUGGER_EXITING,
 	DEBUGGER_SHUTDOWN
 };
 
