@@ -40,6 +40,7 @@ Misc:
  - Debugger: Clean up GDB stub network interfacing
  - Debugger: Simplify debugger state machine to play nicer with the GBA thread loop
  - Debugger: Merge Thumb BL instructions when disassembling
+ - Debugger: Clean up debugger interface, removing obsolete state (fixes #67)
 
 0.1.1: (2015-01-24)
 Bugfixes:
